<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#00FFFF" >
    
    <LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="4dp"
   		android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp"
    	android:orientation="horizontal"
    	android:background="#00FFFF" >
    
    	<Button android:id="@+id/button_cancel"
    		style="@android:style/Widget.Button"
			android:layout_width="0dp"
   			android:layout_height="wrap_content"
   			android:layout_weight="1"
   			android:textColor="#9900ff"
   			android:text="@string/button_cancel" />
    	
    	<Button android:id="@+id/button_save"
    		style="@android:style/Widget.Button"
			android:layout_width="0dp"
   			android:layout_height="wrap_content"
   			android:layout_weight="1"
   			android:textColor="#9900ff"
   			android:text="@string/button_save" />
        
    </LinearLayout>
        
    <ScrollView
    	android:layout_width="match_parent"
    	android:layout_height="match_parent">
    <LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="vertical">
    
	    <LinearLayout
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal"
	    	android:layout_marginTop="4dp"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        android:padding="2dp"
	        android:background="#0000ff">
	    <EditText
	        android:id="@+id/editFName"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/hint_fname"
	        android:textColor="#0000ff"
	        android:background="#ffffff"
	        android:inputType="textPersonName|textCapWords"
	        android:padding="4dp" />
	    </LinearLayout>
	
	    <LinearLayout
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal"
	    	android:layout_marginTop="4dp"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        android:padding="2dp"
	        android:background="#0000ff">
	    <EditText
	        android:id="@+id/editLName"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/hint_lname"
	        android:textColor="#0000ff"
	        android:background="#ffffff"
	        android:inputType="textPersonName|textCapWords"
	        android:padding="4dp" />
	    </LinearLayout>
	    
	    <LinearLayout
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal"
	    	android:layout_marginTop="4dp"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        android:padding="2dp"
	        android:background="#0000ff">
	    <EditText
	        android:id="@+id/editTitle"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/hint_title"
	        android:textColor="#0000ff"
	        android:background="#ffffff"
	        android:inputType="textCapSentences"
	        android:padding="4dp" />
	    </LinearLayout>
	    
	    <LinearLayout
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal"
	    	android:layout_marginTop="4dp"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        android:padding="2dp"
	        android:background="#0000ff">
	    <EditText
	        android:id="@+id/editSalary"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/hint_salary"
	        android:textColor="#0000ff"
	        android:background="#ffffff"
	        android:inputType="number"
	        android:padding="4dp" />
	    </LinearLayout>
    
	</LinearLayout>
	</ScrollView>

</LinearLayout>